--- a/Editor/nikdorn.ndtoolbox.editor.asmdef
+++ b/Editor/nikdorn.ndtoolbox.editor.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "nikdorn.ndtoolbox.editor"
+    "name": "nikdorn.ndtoolbox.editor",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
